[tool.poetry]
name = "cesar_converter"
version = "0.1.0"
description = "Convert string by Cesar cipher"
authors = ["Rhinik <deknowny@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
